Fix three broken endpoints, add per-item prices, rebuild the results table
Backend
-------

`drop-info`, `isVaulted` and `unvaulted` scraped warframe.fandom.com and could
not work. Fandom sits behind Cloudflare and answers a browser challenge to
server-side clients, and the per-relic page holds only the wikitext
`{{RelicPage}}` — the drop table is rendered from a template, so the HTML never
carried the data. `isVaulted` had a second, independent bug: it compared
`tier + name` without a separator against a space-separated input, reading the
tier from objects that `extractUnvaultedRelics` had deliberately stripped of it,
so every tier was the string "null". `drop-info` guarded `cols.size() >= 3`
before reading `cols.get(4)`, and the broad catch turned the resulting
IndexOutOfBounds into the same silent empty list.

All three now read the official drop tables — the source the project already
uses for relic contents — through one cached DropTableService. A relic is
unvaulted exactly when it appears there, which is also why a vaulted relic
correctly has an empty drop list rather than an error.

Per-item prices are new: `GET /api/market/item/{name}` and a batch
`POST /api/market/items`. The batch is not a convenience. A results screen needs
forty prices at once and warframe.market allows roughly three requests a second,
so they queue behind one server-side limiter and share a 15-minute cache — the
price is then paid once for every user instead of once per browser. Measured:
3.9s cold for five items, 9ms warm. Item-name to slug mapping lives here too,
so the frontend never has to know that the drop tables append "Blueprint".

Frontend
--------

The table was relic-granular; the design is item-granular — `Axi A2 / Odonata
Prime Systems` is a row. Price, sorting and eventually the wishlist all hang off
that pairing, so it had to change first.

Adds the filter bar: tier, rarity and refinement as toggles, plus a price
ceiling. An empty selection means "no restriction" rather t